# macro-machines

./: .gitignore  Cargo.toml  MakefileDot  README.md  TODO  graph-dependencies.sh  minimal.dot  run-examples.sh  run.sh  shell.nix  test.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
examples/: door-nodebug.rs  door.rs  generic-nodebug.rs  generic.rs  minimal.rs  params.rs  universal-nodebug.rs  universal.rs
src/: lib.rs  macro_def.rs
