[package]
name = "macro-machines"
version = "0.10.3"
authors = ["Shane Pearman <spearman@github.com>"]
license = "MPL-2.0"
description = "State machine macros with logging and graphviz DOT file generation"
repository = "https://github.com/spearman/macro-machines"
readme = "README.md"
edition = "2021"

[dependencies]
log = "0.4.*"
marksman_escape = "0.1.*"
variant_count = "1.*"

[dev-dependencies]
env_logger = "0.11.*"
unwrap = "1.*"
