[package]
name = "macro-machines"
version = "0.10.6"
authors = ["Shane Pearman <spearman@github.com>"]
license = "MPL-2.0"
description = "State machine macros with logging and graphviz DOT file generation"
repository = "https://github.com/spearman/macro-machines"
readme = "README.md"
edition = "2024"

[dependencies]
log = { version = "0.4.*", features = ["kv"] }
marksman_escape = "0.1.*"
variant_count = "1.*"

[dev-dependencies]
env_logger = { version = "0.11.*", features = ["unstable-kv"] }

[lints.clippy]
empty-line-after-doc-comments = "allow"
