[package]
name = "macro-machines"
version = "0.10.8"
authors = ["Shane Pearman <spearman@github.com>"]
license = "MPL-2.0"
description = "State machine macros with logging and graphviz DOT file generation"
repository = "https://github.com/spearman/macro-machines"
readme = "README.md"
edition = "2024"

[dependencies]
log = { version = "0.4.*", features = ["kv"] }
marksman_escape = "0.1.*"
variant_count = "1.*"

[dev-dependencies]
env_logger = { version = "0.11.*", features = ["kv"] }

[lints.rust]
unknown-lints = "deny"

[lints.clippy]
disallowed-names = "allow"
empty-line-after-doc-comments = "allow"
single-component-path-imports = "allow"
# additional warnings
#allow-attributes = "warn"
assertions-on-result-states = "warn"
bool-to-int-with-if = "warn"
branches-sharing-code = "warn"
cast-possible-truncation = "warn"
cast-possible-wrap = "warn"
cast-sign-loss = "warn"
checked-conversions = "warn"
clear-with-drain = "warn"
cloned-instead-of-copied = "warn"
collection-is-never-read = "warn"
debug-assert-with-mut-call = "warn"
derive-partial-eq-without-eq = "warn"
#doc-broken-link = "warn"   # not available in rust 1.89
doc-include-without-cfg = "warn"
doc-link-code = "warn"
doc-link-with-quotes = "warn"
doc-markdown = "warn"
elidable-lifetime-names = "warn"
empty-drop = "warn"
#empty-enum-variants-with-brackets = "warn"
empty-structs-with-brackets = "warn"
equatable-if-let = "warn"
error-impl-error = "warn"
explicit-deref-methods = "warn"
filter-map-next = "warn"
flat-map-option = "warn"
format-collect = "warn"
format-push-string = "warn"
ignored-unit-patterns = "warn"
impl-trait-in-params = "warn"
implicit-clone = "warn"
inefficient-to-string = "warn"
infinite-loop = "warn"
invalid-upcast-comparisons = "warn"
iter-filter-is-ok = "warn"
iter-filter-is-some = "warn"
iter-with-drain = "warn"
large-stack-frames = "warn"
large-types-passed-by-value = "warn"
literal-string-with-formatting-args = "warn"
lossy-float-literal = "warn"
macro-use-imports = "warn"
manual-assert = "warn"
manual-is-power-of-two = "warn"
manual-is-variant-and = "warn"
manual-let-else = "warn"
map-unwrap-or = "warn"
map-with-unused-argument-over-ranges = "warn"
match-same-arms = "warn"
match-wildcard-for-single-variants = "warn"
maybe-infinite-iter = "warn"
mem-forget = "warn"
mismatching-type-param-order = "warn"
missing-asserts-for-indexing = "warn"
missing-const-for-fn = "warn"
missing-panics-doc = "warn"
module-name-repetitions = "warn"
multiple-crate-versions = "warn"
mut-mut = "warn"
mutex-atomic = "warn"
naive-bytecount = "warn"
needless-bitwise-bool = "warn"
needless-collect = "warn"
needless-continue = "warn"
needless-for-each = "warn"
needless-pass-by-ref-mut = "warn"
needless-raw-string-hashes = "warn"
needless-raw-strings = "warn"
no-effect-underscore-binding = "warn"
non-std-lazy-statics = "warn"
non-zero-suggestions = "warn"
nonstandard-macro-braces = "warn"
option-as-ref-cloned = "warn"
precedence-bits = "warn"
pub-underscore-fields = "warn"
range-minus-one = "warn"
range-plus-one = "warn"
read-zero-byte-vec = "warn"
redundant-clone = "warn"
redundant-closure-for-method-calls = "warn"
redundant-pub-crate = "warn"
redundant-test-prefix = "warn"
ref-as-ptr = "warn"
ref-binding-to-reference = "warn"
ref-option = "warn"
ref-option-ref = "warn"
ref-patterns = "warn"
renamed-function-params = "warn"
rest-pat-in-fully-bound-structs = "warn"
same-functions-in-if-condition = "warn"
same-name-method = "warn"
set-contains-or-insert = "warn"
significant-drop-in-scrutinee = "warn"
significant-drop-tightening = "warn"
single-char-pattern = "warn"
single-option-map = "warn"
str-split-at-newline = "warn"
string-add-assign = "warn"
suboptimal-flops = "warn"
suspicious-operation-groupings = "warn"
suspicious-xor-used-as-pow = "warn"
trait-duplication-in-bounds = "warn"
transmute-ptr-to-ptr = "warn"
trivial-regex = "warn"
trivially-copy-pass-by-ref = "warn"
try-err = "warn"
type-repetition-in-bounds = "warn"
uninhabited-references = "warn"
uninlined-format-args = "warn"
unnecessary-debug-formatting = "warn"
unnecessary-join = "warn"
unnecessary-literal-bound = "warn"
unnecessary-semicolon = "warn"
unnecessary-struct-initialization = "warn"
unnecessary-wraps = "warn"
unneeded-field-pattern = "warn"
unreadable-literal = "warn"
unsafe-derive-deserialize = "warn"
unused-async = "warn"
unused-peekable = "warn"
unused-result-ok = "warn"
unused-rounding = "warn"
unused-self = "warn"
used-underscore-binding = "warn"
used-underscore-items = "warn"
useless-let-if-seq = "warn"
verbose-bit-mask = "warn"
verbose-file-reads = "warn"
while-float = "warn"
zero-sized-map-values = "warn"
